kubernetes/clusters/home-k3s/apps/media/calibre-web-automated/app/httproute-kobo.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: calibre-web-automated-kobo
spec:
  hostnames: ["calibre.${DOMAIN}"]
  parentRefs:
    - name: ${GATEWAY_NAME}
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /kobo
      backendRefs:
        - name: calibre-web-automated
          port: 8083
